refactored out the getPageTargetScale, now usable in both index and index2...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine-themes.css
+++ b/magazine-themes.css
@@ -185,6 +185,12 @@
 	background: red;
 }
 
+.light.page {
+	background: white;
+	color: black;
+}
+
+
 
 /**************************************************** dark theme ****/
 
@@ -259,6 +265,10 @@
 	background: red;
 }
 
+.dark.page {
+	background: black;
+	color: white;
+}
 
 
 
