further format simplification...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine-custom.css
+++ b/magazine-custom.css
@@ -25,6 +25,9 @@
 .cover {
 }
 
+.page.caption-top-arrow .content,
+.page.caption-bottom-arrow .content {
+}
 
 
 /**************************************************** UI elements ****/
