--- a/magazine.css
+++ b/magazine.css
@@ -268,6 +268,11 @@ body {
 	white-space: nowrap;
 	font-size: 0px;
 	min-width: 200px;
+
+	/* XXX this is a bad way to fix shadow visibility outside of 
+	 * 	the ribbon, but it's better than adding an extra tag */
+	overflow: hidden;
+
 }
 .article:empty {
 	color: silver;
