--- a/magazine.css
+++ b/magazine.css
@@ -612,6 +612,13 @@ div.page-number-text {
 }
 
 /* column layouts */
+.page .content .one-column {
+	column-count: 1;
+	-webkit-column-count: 1;
+	-moz-column-count: 1;
+
+	text-align: justify;
+}
 .page .content .two-column {
 	column-count: 2;
 	-webkit-column-count: 2;
