reworked editor toolbars, css still ugly\!
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine.css
+++ b/magazine.css
@@ -371,10 +371,12 @@ body {
 }
 
 
+/*
 .inline-editor-mode .left-toolbar,
 .left-toolbar {
 	display: none;
 }
+*/
 .settings.page {
 	display: none;
 }
@@ -382,6 +384,7 @@ body {
 	display: inline-block;
 }
 
+/*
 .editor-mode .left-toolbar {
 	position: absolute;
 	display: block;
@@ -409,7 +412,7 @@ body {
 	display: block;
 	cursor: hand;
 }
-
+*/
 
 
 /* navigator... */
