--- a/magazine.css
+++ b/magazine.css
@@ -497,6 +497,46 @@ body {
 }
 
 
+/* overlay... */
+.overlay {
+	display: block;
+	position: fixed;
+	z-index: 999999;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+}
+.overlay > div:first-child {
+	position: absolute;
+	display: block;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+
+	opacity: 0.7;
+
+	cursor: hand;
+
+}
+.overlay > div:last-child {
+	position: absolute;
+	left: 0px;
+	top: 50%;
+	width: 100%;
+	height: 50%;
+	margin-top: -20%;
+
+	text-align: center;
+
+	opacity: 0.9;
+
+	box-shadow: 5px 5px 200px 30px black;
+}
+
+
+
 /*********************************************************** modes ***/
 
 /* page view mode -- fullscreen, single page view */
